--- a/HTML/CloudResumeChallenge.html
+++ b/HTML/CloudResumeChallenge.html
@@ -66,8 +66,7 @@
         <p>Hello everyone, I'm Jonathan.</p>
 
         <p>I've been working near the cloud industry for the past few years, but my focus has primarily been on utilizing products already produced in cloud services rather than designing them. With some free time on my hands, I decided to challenge myself by taking on the <a href="https://cloudresumechallenge.dev/docs/the-challenge/aws/">Cloud Resume Challenge</a>. After two years of effort, I'm thrilled to announce that I've completed the challenge!</p>
-
-        <img src="https://miro.medium.com/v2/resize:fit:828/format:webp/1*agGvuEPjZp9kEn91DI1Cwg.png" alt="AWS Services Architecture">
+		<img src="assets/images/CloudResumeArchitecture.png" alt="AWS Services Architecture">
         <p class="image-caption">AWS services used and how they integrate with the entire architecture. (Image credit: Cody Waits)</p>
 
         <h2>2021: The Beginning</h2>
@@ -83,7 +82,8 @@
 
         <h3>Steps 4 and 5: Static Website and HTTPS (2 hours | Feb 2023)</h3>
         <p>Next, I created an S3 bucket named <code>witcoskitech.com</code> in the us-east-1 region (shout out to Northern Virginia, just a few miles from my house). I set all features and encryption to default, then uploaded the files from Steps 2 and 3 into the S3 bucket. To make the website accessible via HTTPS, I used CloudFront, setting the S3 bucket as the origin and adjusting the Origin access to "Origin access control settings (recommended)." After creating the CloudFront distribution and copying the S3 bucket policy, I was finally able to see my website live!</p>
-
+		<img src="assets/images/Chatgpt_cartoon2.png" alt="Cartoon of a stressed man working on computer while managing kids">
+		<p class="image-caption">Here is the cartoon illustration mae by ChatGPT of a stressed man holding a baby while trying to work on a computer.</p>
         <h2>2024: Overcoming Obstacles</h2>
         <h3>Step 6: DNS (30 minutes… scratch that, 80 hours | Feb 2023 to April 2024)</h3>
         <p>I purchased the domain <code>witcoskitech.com</code> through Route 53 and used AWS Certificate Manager to procure an SSL certificate for the site. However, this is where things went terribly wrong. For some reason, my S3 bucket wouldn't connect with my domain. I tried blog posts, AI chatbots, and posting on help forums, but nothing worked. I eventually gave up, especially as life got in the way—my first son was born!</p>
