--- a/HTML/index.html
+++ b/HTML/index.html
@@ -232,6 +232,25 @@
 										</div>
 									</div>
 								</div><!--//item-->
+								<div class="item">
+								<div class="item-heading row align-items-center mb-2">
+									<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Unity Games</h4>
+									<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">GIS SDK API</div>
+								</div>
+								<div class="item-content">
+									<div class="row">
+										<div class="col-md-3">
+											<a href="https://jwitcoski.github.io/unity.html">
+												<img src="https://jwitcoski.github.io/UnityGames/tankgame/tank.gif" alt="Unity Games" class="img-fluid thumbnail">
+											</a>
+										</div>
+										<div class="col-md-9">
+											<p>Here are some examples of my Unity games I created using a GIS SDK API. These games are available to be played on a Windows PC. Visit <a href="https://jwitcoski.github.io/unity.html" class="theme-link">Unity Games</a></p>
+										</div>
+									</div>
+								</div>
+							</div><!--//item-->
+
 							</section><!--//project-section-->						</div><!--//resume-main-->
 						<aside class="resume-aside col-12 col-lg-4 col-xl-3 px-lg-4 pb-lg-4">
 							<section class="skills-section py-3">
@@ -249,15 +268,7 @@
 											<li>Lead and deliver complex software systems</li>
 										</ul>
 									</div><!--//item-->
-									<div class="item">
-										<h4 class="item-title">Professional</h4>
-										<ul class="list-unstyled resume-skills-list">
-											<li class="mb-2">Effective communication</li>
-											<li class="mb-2">Team player<li>
-												<li class="mb-2">Strong problem solver</li>
-												<li>Good time management</li>
-											</ul>
-										</div><!--//item-->
+
 									</section><!--//skills-section-->
 									<section class="education-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-4">Education</h3>
