--- a/HTML/index.html
+++ b/HTML/index.html
@@ -205,7 +205,7 @@
 										<div class="row">
 											<div class="col-md-3">
 												<a href="/CloudResumeChallenge.html">
-													<img src="https://miro.medium.com/v2/resize:fit:828/format:webp/1*agGvuEPjZp9kEn91DI1Cwg.png" alt="Cloud Resume Challenge" class="img-fluid thumbnail">
+													<img src="assets/images/CloudResumeArchitecture.png" alt="Cloud Resume Challenge" class="img-fluid thumbnail">
 												</a>
 											</div>
 											<div class="col-md-9">
