Update blog post to fix spelling mistakes!!

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -308,7 +308,7 @@
 											<li class="mb-2">Climbing</li>
 											<li class="mb-2">Skiing</li>
 											<li class="mb-2">Maps</li>
-											<li>Travelling</li>
+											<li>Traveling</li>
 										</ul>
 									</section><!--//certificates-section-->
 									
