--- a/HTML/CloudResumeChallenge.html
+++ b/HTML/CloudResumeChallenge.html
@@ -83,7 +83,7 @@
         <h3>Steps 4 and 5: Static Website and HTTPS (2 hours | Feb 2023)</h3>
         <p>Next, I created an S3 bucket named <code>witcoskitech.com</code> in the us-east-1 region (shout out to Northern Virginia, just a few miles from my house). I set all features and encryption to default, then uploaded the files from Steps 2 and 3 into the S3 bucket. To make the website accessible via HTTPS, I used CloudFront, setting the S3 bucket as the origin and adjusting the Origin access to "Origin access control settings (recommended)." After creating the CloudFront distribution and copying the S3 bucket policy, I was finally able to see my website live!</p>
 		<img src="assets/images/Chatgpt_cartoon2.png" alt="Cartoon of a stressed man working on computer while managing kids">
-		<p class="image-caption">Here is the cartoon illustration mae by ChatGPT of a stressed man holding a baby while trying to work on a computer.</p>
+		<p class="image-caption">Here is the cartoon illustration by ChatGPT of a stressed man holding a baby while trying to work on a computer.</p>
         <h2>2024: Overcoming Obstacles</h2>
         <h3>Step 6: DNS (30 minutes… scratch that, 80 hours | Feb 2023 to April 2024)</h3>
         <p>I purchased the domain <code>witcoskitech.com</code> through Route 53 and used AWS Certificate Manager to procure an SSL certificate for the site. However, this is where things went terribly wrong. For some reason, my S3 bucket wouldn't connect with my domain. I tried blog posts, AI chatbots, and posting on help forums, but nothing worked. I eventually gave up, especially as life got in the way—my first son was born!</p>
@@ -99,7 +99,7 @@
 
 
 		<img src="assets/images/Chatgpt_cartoon.png" alt="Cartoon of a stressed man working on computer while managing kids">
-		<p class="image-caption">Here is the cartoon illustration mae by ChatGPT of a stressed man holding a baby and managing a two-year-old while trying to work on a computer. This image captures the light-hearted and humorous scenario of balancing the Cloud Resume Challenge with family life.</p>
+		<p class="image-caption">Here is the cartoon illustration by ChatGPT of a stressed man holding a baby and managing a two-year-old while trying to work on a computer. This image captures the light-hearted and humorous scenario of balancing the Cloud Resume Challenge with family life.</p>
 
 
         <p>Since no one really wants to read a resume, I decided to expand the challenge into something more interesting by showcasing my cartographic and geographic skills. I created ski maps using an open-source GIS program called QGIS, utilizing DEM data from <a href="https://opentopography.org/">OpenTopography</a> and ski map data from <a href="https://openstreetmap.org/">OpenStreetMap.org</a>. I bought <code>globalskiatlas.com</code> to host this project.</p>
